public/stylesheets/theta.css
@font-face {
	font-family: 'Gotham';
	src: url('/font/Gotham-Book.otf ') format('opentype');
	font-family: 'Gotham-Ital';
	src: url('/font/Gotham-BookItalic.otf ') format('opentype');
	font-family: 'Gotham-Med';
	src: url('/font/Gotham-Medium.otf ') format('opentype');
	font-family: 'Gotham-Bold';
	src: url('/font/Gotham-Bold.otf ') format('opentype');
}

body {
	font-family: 'Gotham', Helvetica, sans-serif;
	color: #000;
	background-color: #fff;
	font-size: 1.15em;
	line-height: 25px;
}

p, ul, ol, dl, pre {
	font-family: 'Gotham', Helvetica, sans-serif;
	font-size: 1.0em;
	margin:0.625em 0;
	padding:0.375em 0.25em 0.25em 0.375em;
}

i, em {
	font-family: 'Gotham-Ital', Helvetica, sans-serif;
	font-style: italic;
}

b, strong {
	font-family: 'Gotham-Bold', Helvetica, sans-serif;
	font-weight: bold;
}

small {
	font-size: 0.75em;
	font-weight: normal;
}

dl {
	margin-left: 2.5em
}

dt {
	color: black;
}

hr {
	color: #000;
	background-color: #000;
	border: 0;
	height: 0.0625em;
	margin: 1.875em 0;
}

blockquote {
	font-family: 'Gotham-Ital', Helvetica, sans-serif;
	font-style: italic;
	margin: 1.25em 3.75em 1.25em 3.75em;
	padding: 0;
	color: #000;
}

blockquote em {
	color:#000;
}

blockquote strong {
	color:#000;
	font-weight: bold;
}

tt, pre, code, samp, kbd {
	color: #ff0000;
	font-size: 1.1em;
}

pre, code {
	color:#000;
	padding:0.375em 0.25em 0.25em 0.375em;
	border: 0.0em solid black;
	border-left-width:0.2em;
	/*border-right-width:0.4em;*/
	line-height:1.5em;
	overflow:auto;
}

abbr {
	font-size:0.75em;
	text-transform: uppercase;
	font-variation: smallcaps;
	letter-spacing:0.1em;
}

a img {
	border: none;
}

a, a:link, a:visited{
	color: black;
	text-decoration: none;
}

a:hover {
	background: transparent;
	color:#ff0000;
	text-decoration:none;
}

/* Headings
--------------------------------------------------------------------------- */

h1, h2, h3 {
	font-family: 'Gotham-Bold', Helvetica, sans-serif;
	font-weight: bold;
	text-transform: uppercase;
	letter-spacing: 0.2em;
}

h1 {
	font-size: 3.5em;
	line-height:1.5em;
	margin:0.625em 0;
	color:#000;
	text-align: center;
}

h2 {
	font-size:2em;
	line-height:1em;
	margin:1em 0;
	color:#000;
}

h3 {
	font-size:1.5em;
	line-height:1em;
	margin:1.5em 0 0.675em 0;
	color: black;
}
}

/* Header / Titling
--------------------------------------------------------------------------- */

#header {
	text-align:center;
	margin:1.25em 1.25em;
}

#header h1 {
	letter-spacing: 0.2em;
	margin:0;
}

#header h1 a, #header h1 a:link, #header h1 a:visited {
	color:#000;
	text-decoration:none;
	background:transparent;
}

#header h1 a:hover{
 	color:#ff0000;
 	text-decoration: none;
 	background:transparent;
 }

#header p {
	margin: 0;
	color: #000;
	text-transform: auto;
	text-align: center;
}

#header a, #header a:link, #header a:visited {
	color: black;
	margin:0;
}

#header a:hover {
	background: transparent;
	color:#ff0000;
	text-decoration:none;
}

/* Footer
--------------------------------------------------------------------------- */

#footer {
	font-family: 'Gotham-Med', Helvetica, sans-serif;
	clear: both;
	color: #000;
	font-size: 0.9em;
	font-weight:bold;
	line-height: 1.8em;
	border-top:0.0625em solid transparent;
	padding: 1.1875em 0 0 0;
	margin: 2.5em 0 2.5em 0;
	text-align:center;
}

#footer p {
	margin:0;
}

/* Classes
--------------------------------------------------------------------------- */

.list {
	margin:0 0 0.3em 0;
	padding:0;
}

.caps {
	font-variant:small-caps;
}

.stamp {
	font-size: 0.7em;
	line-height: 1em;
	color: #000;
	letter-spacing: 0.3em;
	margin:-0.1em 0 0.1em 2em;
}

.date {
	/*line-height: 1em;*/
	color: #000;
	letter-spacing: 0.1em;
}

.gray {
	font-size: 100%;
	/*background: transparent;*/
	padding:0.1em 1em 1em 1em;
	max-width:33em;
	margin:0.625em auto 0.625em auto;
}

.snip {
	font-size: 80%;
	padding:2.5em;
	max-width:36em;
	margin:2.5em auto 0.625em auto;
}

img.icon {
	height: 25px;
	width: 25px;
	float: left;
	position: relative;
	left: 15px;
	bottom: 3px;
}

/* IE Hacks
--------------------------------------------------------------------------- */

* html body{width:36em}
* html div.index{width:36em}

/* End CSS */

